--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==8.1.0
 bcrypt==3.2.0
 blinker==1.4
 cffi==1.14.4
@@ -6,14 +7,21 @@ dominate==2.6.0
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+flask-marshmallow==0.14.0
+Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.1
+psycopg2==2.8.6
 pycparser==2.20
+pytz==2020.5
 six==1.15.0
 SQLAlchemy==1.3.22
 visitor==0.1.3
