--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 aniso8601==8.1.0
 bcrypt==3.2.0
 blinker==1.4
+cachelib==0.1.1
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
 dominate==2.6.0
 Flask==1.1.2
@@ -12,8 +15,10 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
+Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -22,8 +27,11 @@ marshmallow-sqlalchemy==0.24.1
 psycopg2==2.8.6
 pycparser==2.20
 pytz==2020.5
+requests==2.25.1
 six==1.15.0
+spotipy==2.16.1
 SQLAlchemy==1.3.22
+urllib3==1.26.2
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
