--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "bootstrap-vue": "^2.21.2",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-color": "^2.8.1",
     "vue-router": "^3.4.9",
@@ -26,7 +31,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
