--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+dnspython==2.1.0
 dominate==2.6.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.10
-Flask-Login==0.5.0
+Flask-JWT-Extended==3.25.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
@@ -24,8 +26,10 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 marshmallow==3.10.0
 marshmallow-sqlalchemy==0.24.1
+Pillow==8.1.0
 psycopg2==2.8.6
 pycparser==2.20
+PyJWT==1.7.1
 pytz==2020.5
 requests==2.25.1
 six==1.15.0
