--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "core-js": "^3.6.5",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "normalize": "^0.3.1",
+    "normalize.css": "^8.0.1",
+    "reset-css": "^5.0.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
