--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-color": "^2.8.1",
+    "vue-disable-autocomplete": "0.0.4",
     "vue-router": "^3.4.9",
     "vue-styled-components": "^1.6.0",
     "vue-swatches": "^2.1.0",
