--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,14 @@ Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.10
 Flask-JWT-Extended==3.25.0
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
 Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -30,6 +32,7 @@ Pillow==8.1.0
 psycopg2==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
+python-dotenv==0.15.0
 pytz==2020.5
 requests==2.25.1
 six==1.15.0
