--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -39,6 +40,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "execa": "latest",
+    "rimraf": "^3.0.2",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
@@ -62,6 +65,6 @@
     "not dead"
   ],
   "envConfig": {
-    "apiUrl": "http://localhost"
+    "apiUrl": "https://findyourtune.herokuapp.com"
   }
 }
